--- a/SiteServer.Web/Web.config
+++ b/SiteServer.Web/Web.config
@@ -14,7 +14,8 @@
     <add key="SecretKey" value="54bb60d15c65c345" />
     <add key="DatabaseType" value="SqlServer" />
     <!-- <add key="ConnectionString" value="Server=dev.siteserver.cn;Uid=sa;Pwd=Brtech88;Database=cms_test;" /> -->
-    <add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />
+    <!--<add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />-->
+    <add key="ConnectionString" value="Server=.;Uid=sa;Pwd=1qaz!@#$;Database=cms;" />
   </appSettings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
