--- a/SiteServer.Web/SiteServer.API.csproj
+++ b/SiteServer.Web/SiteServer.API.csproj
@@ -2697,6 +2697,7 @@
     <Content Include="SiteServer\Shared\_LayoutLayer.cshtml" />
     <Content Include="SiteServer\Shared\_LayoutRoot.cshtml" />
     <Content Include="SiteServer\Shared\_LayoutWhite.cshtml" />
+    <Content Include="SiteServer\loginsso.aspx" />
     <Content Include="SiteServer\web.config" />
     <Content Include="SiteFiles\assets\Flashes\videojs\captions.vtt" />
     <Content Include="SiteFiles\assets\Styles\addition.css.1.1" />
@@ -4229,6 +4230,15 @@
     <Compile Include="ErrorRedirectModule.cs" />
     <Compile Include="NamespaceHttpControllerSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteServer\Model\UserInfo.cs" />
+    <Compile Include="SiteServer\Model\ResultInfo.cs" />
+    <Compile Include="SiteServer\loginsso.aspx.cs">
+      <DependentUpon>loginsso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SiteServer\loginsso.aspx.designer.cs">
+      <DependentUpon>loginsso.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="WebApiConfig.cs" />
   </ItemGroup>
