--- a/SiteServer.Web/Web.config
+++ b/SiteServer.Web/Web.config
@@ -13,7 +13,14 @@
     <add key="HomeDirectory" value="Home" />
     <add key="SecretKey" value="54bb60d15c65c345" />
     <add key="DatabaseType" value="SqlServer" />
-    <!-- <add key="ConnectionString" value="Server=dev.siteserver.cn;Uid=sa;Pwd=Brtech88;Database=cms_test;" /> -->
+    <!--是否单点登录-->
+    <add key="IsSso" value="true" />
+    <!--单点登录地址-->
+    <add key="SSOUrl" value="http://yzlsso.zhijiao361.com" />
+    <add key="AppID" value="52ba74eb-896d-4b9a-8b1f-2cb66dc7c623"/>
+    <add key="AppSecret" value="B68EIA1ePG5U02Zo5t/ocg=="/>
+    <add key="SupportName" value="安徽渔之蓝教育软件技术有限公司" />
+    <add key="SupportLink" value="http://www.zhijiao361.com" />
     <!--<add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />-->
     <add key="ConnectionString" value="Server=.;Uid=sa;Pwd=1qaz!@#$;Database=cms;" />
   </appSettings>
