完成在线模板修改

--- a/SiteServer.Web/Web.config
+++ b/SiteServer.Web/Web.config
@@ -19,6 +19,8 @@
     <add key="SSOUrl" value="http://yzlsso.zhijiao361.com" />
     <add key="AppID" value="52ba74eb-896d-4b9a-8b1f-2cb66dc7c623"/>
     <add key="AppSecret" value="B68EIA1ePG5U02Zo5t/ocg=="/>
+    <!--授权平台地址-->
+    <add key="AuthorizationUrl" value="http://yzlsq.zhijiao361.com" />
     <add key="SupportName" value="安徽渔之蓝教育软件技术有限公司" />
     <add key="SupportLink" value="http://www.zhijiao361.com" />
     <!--<add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />-->
