跨站转发相关修改

--- a/SiteServer.Web/Web.config
+++ b/SiteServer.Web/Web.config
@@ -16,7 +16,7 @@
     <!--<add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />-->
     <add key="ConnectionString" value="Server=.;Uid=sa;Pwd=1qaz!@#$;Database=cms;" />
     <!--是否单点登录-->
-    <add key="IsSso" value="true" />
+    <add key="IsSso" value="false" />
     <!--单点登录地址-->
     <add key="SSOUrl" value="http://yzlsso.zhijiao361.com" />
     <add key="AppID" value="52ba74eb-896d-4b9a-8b1f-2cb66dc7c623"/>
