修复跨站转发bug

--- a/SiteServer.Web/Web.config
+++ b/SiteServer.Web/Web.config
@@ -13,10 +13,11 @@
     <add key="HomeDirectory" value="Home" />
     <add key="SecretKey" value="54bb60d15c65c345" />
     <add key="DatabaseType" value="SqlServer" />
-    <!--<add key="ConnectionString" value="server=dev.siteserver.cn;uid=sa;pwd=Capa20176630;database=mrxh_backup" />-->
-    <add key="ConnectionString" value="Server=.;Uid=sa;Pwd=1qaz!@#$;Database=cms;" />
+    <!--第一次安装清空这个字段-->
+    <!--<add key="ConnectionString" value="Server=.;Uid=sa;Pwd=1qaz!@#$;Database=cms;" />-->
+    <add key="ConnectionString" value="Server=192.168.1.240;Uid=sa;Pwd=1qaz!@#$;Database=ahjsweb;" />
     <!--是否单点登录-->
-    <add key="IsSso" value="false" />
+    <add key="IsSso" value="true" />
     <!--单点登录地址-->
     <add key="SSOUrl" value="http://yzlsso.zhijiao361.com" />
     <add key="AppID" value="52ba74eb-896d-4b9a-8b1f-2cb66dc7c623"/>
